layout adjustments - fix horizontal scroll

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,7 +1,12 @@
 html {
   width: 100vw !important;
   background-color: #f7f7f7;
-  overflow-y: auto;
+}
+
+@media only screen and (max-width: 719px) {
+  html {
+    overflow-y: overlay !important;
+  }
 }
 
 body {
@@ -164,8 +169,6 @@ textarea.input {
   background-color: transparent;
   color: #353535;
 }
-
-
 
 
 
